# robot_agent

./: README.md  pyproject.toml  test.py
.claude/: settings.json
robot_agent/: app_factory.py  cli.py  delete_skill.py  diagnose.py  logging_config.py  new_skill.py  rename_skill.py  runtime.py  skill_config_defaults.py  skill_configs.py  state.py  utils.py
robot_agent.egg-info/: PKG-INFO  SOURCES.txt
robot_agent/api/: agent.py  buttons.py  camera.py  configs.py  devices.py  diagnostics.py  guides.py  locations.py  skills.py
robot_agent/core/: button_manager.py  config_manager.py  device_manager.py  guide_manager.py  skill_registry.py  unified_agent.py
robot_agent/core/planning/: __init__.py  announcer.py  base.py  loop.py  mapper.py  records.py  registry.py  verify.py
robot_agent/core/planning/backends/: __init__.py  llm_direct.py  pyplanner_grace.py
robot_agent/skills/: __init__.py
